Setup complete, we can now draw results, or compute time, and if we're bored always to put folder name, algo name and situation, we can export variables and use the adapted line in makefile

--- a/performGraphical/Makefile
+++ b/performGraphical/Makefile
@@ -13,7 +13,7 @@ EXEC_DEBUG =$(RELEASE_DEBUG_DIR)/drawShortest
 
 
 CC = g++
-CFLAGS = -Wall -Werror -O1
+CFLAGS = -std=c++11 -Wall -Werror -O1
 LDFLAGS = -lsfml-graphics -lsfml-window -lsfml-system
 LDFLAGS_DEBUG = -g -lsfml-graphics-d -lsfml-window-d -lsfml-system-d
 
