A star rapidly made, it seems to work even if trajectories are bad

--- a/julienS/Makefile
+++ b/julienS/Makefile
@@ -1,7 +1,7 @@
 OBJ_DIR = obj
 SRC_DIR1 = .
 SRC_DIR2 = src
-SRC = $(wildcard $(SRC_DIR1)/*.cpp) $(wildcard $(SRC_DIR2)/*.cpp)
+SRC = $(wildcard $(SRC_DIR2)/*.cpp) $(wildcard $(SRC_DIR1)/*.cpp)
 OBJ := $(patsubst %.cpp, $(OBJ_DIR)/%.o, $(notdir $(SRC)))
 VPATH=.:src
 
@@ -13,7 +13,7 @@ EXEC_DEBUG =$(RELEASE_DEBUG_DIR)/myAlgo
 
 
 CC = g++
-CFLAGS = -Wall -Werror -O1
+CFLAGS = -Wall -Werror -O1 -std=c++11
 LDFLAGS =
 LDFLAGS_DEBUG = -g
 
@@ -29,7 +29,6 @@ $(EXEC_DEBUG): $(OBJ)
 	$(CC) -o $@ $^ $(LDFLAGS_DEBUG)
 
 $(OBJ_DIR)/%.o: %.cpp
-	echo $(SRC)
 	$(CC) -o $@ -c $< $(CFLAGS)
 
 createDir:
