Amélioration de la construction de la bibliothèque pour ne pas inclure le "main"

--- a/SylvainLR/Makefile
+++ b/SylvainLR/Makefile
@@ -1,14 +1,15 @@
 CC := g++
 CFLAGS := -iquote ./headers -Wall -Wextra -std=c++11 -O1
 SRC := $(wildcard src/*.c)
+SRCS := $(SRC) main.c
 .PHONY: clean
 
-main: $(SRC:%.c=%.o)
+main: $(SRCS:%.c=%.o)
 	$(CC) $(CFLAGS) -o $@ $^
 
 lib:
 	ar -cvq libpath.a $(SRC:%.c=%.o)
 
 clean:
-	rm -f $(SRC:%.c=%.o)
+	rm -f $(SRCS:%.c=%.o)
 	rm -f main
