Nettoyage du code et ajout de commentaires

--- a/petitAgneauDu35/Makefile
+++ b/petitAgneauDu35/Makefile
@@ -1,7 +1,11 @@
+CC := gcc
 CFLAGS := -O2 -std=gnu99 -Wall -Wextra -lm
-.PHONY := clean main
+.PHONY := clean dijkstra
 
-main : dijkstra
+dikstra : dijkstra.o utils.o
+	$(CC) $(CFLAGS) $^ -o $@
 
 clean :
 	rm -f dijkstra
+	rm -f utils
+	rm -f *.o
