Amelioration de l'organisation des fichiers

--- a/petitAgneauDu35/Makefile
+++ b/petitAgneauDu35/Makefile
@@ -1,13 +1,22 @@
 CC := gcc
-CFLAGS := -O2 -std=gnu99 -Wall -Wextra
+CFLAGS := -iquote includes/ -O2 -std=gnu99 -Wall -Wextra
 LINKFLAGS := -lm
+OUTPUT := out/
+SRC := src/
 
 .PHONY := clean
 
-dijkstra : dijkstra.o utils.o path.o
+$(OUTPUT)%.o : $(SRC)%.c OUT
+	$(CC) $(CFLAGS) -c $< -o $@
+
+dijkstra : $(OUTPUT)dijkstra.o $(OUTPUT)utils.o $(OUTPUT)path.o
 	$(CC) $(CFLAGS) $^ -o $@ $(LINKFLAGS)
+
+OUT:
+	-mkdir $(OUTPUT)
 
 clean :
 	rm -f dijkstra
 	rm -f utils
-	rm -f *.o
+	rm -f $(OUTPUT)*.o
+	-rmdir $(OUTPUT)
